<resources>
    <string name="app_name">OurStory</string>
    <string name="bookshelf">书架</string>
    <string name="find">发现</string>
    <string name="collection">我的收藏</string>
    <string name="mypublish">我的发起</string>
    <string name="myjoin">我的参与</string>
    <string name="Todayintroduction">今日推介</string>
    <string name="ranklist">排行榜</string>
    <string name="allWorks">全部作品</string>
    <string name="start_publish">我要发起</string>
    <string name="start_work">我要续写</string>
    <string name="details">详情</string>
    <string name="start_read">立即阅读</string>
    <string name="start_collection">加入收藏</string>
    <string name="catalog">目录</string>
    <string name="empiric_value">经验值</string>
    <string name="my_work">我的续写</string>
    <string name="my_fan">我的粉丝</string>
    <string name="my_attention">我的关注</string>
    <string name="history">历史记录</string>
    <string name="message">消息</string>
    <string name="notify">通知</string>
    <string name="chat">聊天</string>
    <string name="search">搜索</string>
    <string name="back">返回</string>
    <string name="see_comment_benduan">本段说</string>
    <string name="publish_comment">评论</string>
    <string name="share">分享</string>
    <string name="report_this">举报本段</string>
    <string name="publish_story">发布</string>
    <string name="input_story">请输入正文</string>
    <string name="blank_spaces">\t\t\t\t</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="dustbin_title">要将该段移至回收站吗？</string>
    <string name="dustbin_message">回收站内的段文可以在30天内恢复，超过30天将被永久删除</string>
    <string name="fill_in_information">填写作品信息</string>
    <string name="finish">完成</string>
    <string name="book_name">作品名称：</string>
    <string name="book_brief">作品简介</string>
    <string name="book_type">作品类型</string>
    <string name="book_public">指定观看人群</string>
    <string name="book_writer">指定续写人员</string>
    <string name="book_write_type">作品续写类型</string>
    <string name="book_start">作品开头</string>
    <string name="please_fill">请填写</string>
    <string name="please_select">请选择</string>
    <string name="max_book_name">15字以内汉字</string>
    <string name="xuan_yanqing">玄幻言情</string>
    <string name="xianxiaqiyuan">仙侠奇缘</string>
    <string name="gudaiyanqing">古代言情</string>
    <string name="xiandaiyanqing">现代言情</string>
    <string name="langmanqingchun">浪漫青春</string>
    <string name="xuanyilingyi">悬疑灵异</string>
    <string name="kehuankongjian">科幻空间</string>
    <string name="youxijingji">游戏竞技</string>
    <string name="danmeixiaoshuo">耽美小说</string>
    <string name="single_write">单续写</string>
    <string name="single_write_info">一个故事只有一个发展和一个结尾</string>
    <string name="double_write">双续写</string>
    <string name="double_write_info">一个故事的每一段有两个发展和不同的结尾</string>
    <string name="linkman">联系人</string>
    <string name="recent_linkman">最近联系人</string>
    <string name="bookpublic_friend">我的好友</string>
    <string name="bookpublic_friend_info">只对相互关注的人可见</string>
    <string name="bookpublic_fan">我的粉丝</string>
    <string name="bookpublic_fan_info">只对我的粉丝可见</string>
    <string name="bookpublic_public">公开</string>
    <string name="bookpublic_public_info">对所有人可见</string>
    <string name="continue_write">参与续写</string>
    <string name="latest_update">最新更新</string>
    <string name="continue_write_start">可参与续写</string>
    <string name="cancel">取消</string>
    <string name="password">密码</string>
    <string name="account">账户</string>
    <string name="load">登录</string>
    <string name="regsiter">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="lable">安康盛世也有冻死饿殍\n动荡乱世也有荣华富贵</string>

</resources>
