<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@mipmap/ic_write1"
        android:paddingTop="2dp"
        android:text="@string/start_work"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="@color/second_text_color"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/start_read"
        android:gravity="center"
        android:textSize="12sp"
        android:background="@color/main_bule"
        android:textColor="@color/white"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@mipmap/ic_collection_gray"
        android:text="@string/start_collection"
        android:gravity="center"
        android:textSize="12sp"
        android:paddingTop="2dp"
        android:textColor="@color/second_text_color"
        />


</LinearLayout>