<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.asus1.ourstory.Activities.LoadActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        >

        <com.example.asus1.ourstory.Views.LoadBg
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@mipmap/ic_app"
               android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/lable"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                />
        </LinearLayout>


    </FrameLayout>

    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/bg_edit_load"
        android:padding="10dp"
        android:textSize="14sp"
        android:textColor="@color/Text_color"
        android:hint="@string/account"
        android:id="@+id/edit_account"
        />

    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/bg_edit_load"
        android:padding="10dp"
        android:textSize="14sp"
        android:textColor="@color/Text_color"
        android:hint="@string/password"
        android:id="@+id/edit_password"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_load"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:textSize="14sp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/white"
        android:text="@string/load"
        android:background="@drawable/bg_btn_load"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_register"
            android:textSize="12sp"
            android:textColor="@color/second_text_color"
            android:text="@string/regsiter"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_forgetpassword"
            android:textSize="12sp"
            android:textColor="@color/second_text_color"
            android:text="@string/forget_password"
            android:layout_gravity="right"
            />

    </FrameLayout>

</LinearLayout>
