<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.asus1.ourstory.Activities.BookWriteTypeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:paddingTop="24dp"
        android:background="@color/main_bule"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/iv_back"
            android:src="@mipmap/ic_back_white"
            android:scaleType="centerInside"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/book_public"
            android:gravity="center"
            />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:id="@+id/frame_public"
        android:background="@drawable/cilick_publish_story_item">


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/iv_public"
            android:src="@drawable/radtio_button"
            android:scaleType="centerInside"
            android:layout_gravity="center_vertical"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/Text_color"
                android:text="@string/bookpublic_public"
                android:layout_marginTop="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/second_text_color"
                android:text="@string/bookpublic_public_info"
                android:layout_marginTop="6dp"
                />


        </LinearLayout>



    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingLeft="10dp"
        android:id="@+id/frame_fan"
        android:background="@drawable/cilick_publish_story_item">


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/iv_fan"
            android:src="@drawable/radtio_button"
            android:scaleType="centerInside"
            android:layout_gravity="center_vertical"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/Text_color"
                android:text="@string/bookpublic_fan"
                android:layout_marginTop="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/second_text_color"
                android:text="@string/bookpublic_fan_info"
                android:layout_marginTop="6dp"
                />


        </LinearLayout>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingLeft="10dp"
        android:id="@+id/frame_friend"
        android:background="@drawable/cilick_publish_story_item">


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/iv_friend"
            android:src="@drawable/radtio_button"
            android:scaleType="centerInside"
            android:layout_gravity="center_vertical"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/Text_color"
                android:text="@string/bookpublic_friend"
                android:layout_marginTop="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/second_text_color"
                android:text="@string/bookpublic_friend_info"
                android:layout_marginTop="6dp"
                />


        </LinearLayout>
    </FrameLayout>

</LinearLayout>
